--- a/global.css
+++ b/global.css
@@ -17,4 +17,17 @@
   --gray-400: #878EA1;
   --gray-500: #C0C4CE;
   --gray-600: #E2E4E9;
+
+  --font-asap: 'Asap', sans-serif;
+  --text-lg: 700 56px/120% var(--font-asap);
+  --text-md: 700 24px/120% var(--font-asap);
+  --text-sm: 700 16px/120% var(--font-asap);
+
+  --font-inconsolata: 'inconsolata', sans-serif;
+  --text-in: 400 20px/120% var(--font-inconsolata);
+
+  --font-maven: 'maven pro', sans-serif;
+  --text-ma-md: 400 16px/140% var(--font-maven);
+  --text-ma-sm: 400 14px/140% var(--font-maven);
+   
 }
