--- a/styles/header.css
+++ b/styles/header.css
@@ -5,7 +5,8 @@
   display: block;
   text-align: center;
   svg:nth-child(2){
-  margin: 94px 0px 57px;}
+    color: var(--gray-400);
+    margin-top: 94px;}
  
 
   .info{
