--- a/styles/utilitys.css
+++ b/styles/utilitys.css
@@ -10,3 +10,24 @@
   grid-template-columns: repeat(3, 330px);
   
 }
+
+.grid-areas{
+  grid-template-columns: repeat(3, 280px);
+  grid-template-areas: 
+  "web api dev";
+}
+
+.work{
+  margin-bottom: 56px;
+text-align: center;
+  p{
+    margin-bottom: 8px;
+    font: var(--text-in);
+    color: var(--red);
+  }
+
+  h3{
+    font: var(--text-md);
+    color: var(--gray-600);
+  }
+}
