--- a/styles/sectionservices.css
+++ b/styles/sectionservices.css
@@ -2,39 +2,34 @@
   background-color: var(--gray-100);
   padding: 88px 120px 120px 120px;
 
-
-  span strong{
-    margin-top: 20px;
-  }
-
   span img{
     max-width: 48px;
     max-height: 48px;
   }
 
   .web{
+    display: grid;
     grid-area: web;
     width: 280px;
     padding: 20px;
-    gap: 20px;
     border-radius: 12px;
     border: 2px solid var(--gray-200);
   }
 
   .api{
+    display: grid;
     grid-area: api;
     width: 280px;
     padding: 20px;
-    gap: 20px;
     border-radius: 12px;
     border: 2px solid var(--gray-200);
   }
 
   .dev{
+    display: grid;
     grid-area: dev;
     width: 280px;
     padding: 20px;
-    gap: 20px;
     border-radius: 12px;
     border: 2px solid var(--gray-200);
   }
